--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="picture of a lion roaring" title="animal sight seeing"/>
   </body>
 </html>
